##############################################################################
# Cmake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(ecl_build)

##############################################################################
# Catkin
##############################################################################

find_package(catkin)

catkin_package()


##############################################################################
# Work
##############################################################################

add_subdirectory(cmake)


