<?xml version="1.0"?>
<package>
  <name>ecl_build</name>
  <version>0.5.0</version>
  <description>
     Collection of cmake/make build tools primarily for ecl development itself, but also
     contains a few cmake modules useful outside of the ecl.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_scripts</url>
  <url type="repository">http://code.google.com/p/embedded-control-library/source/browse/</url>
  <url type="bugtracker">http://code.google.com/p/embedded-control-library/issues/list</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <build_depend>catkin</build_depend>
  <build_depend>ecl_license</build_depend>
</package>


