<?xml version="1.0"?>
<package format="2">
  <name>ecl_license</name>
  <version>1.0.3</version>
  <description>
     Maintains the ecl licenses and also provides an install
     target for deploying licenses with the ecl libraries.
  </description>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_license</url>
  <url type="repository">https://github.com/stonier/ecl_tools</url>
  <url type="bugtracker">https://github.com/stonier/ecl_tools/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


