<package>
  <name>ecl_tools</name>
  <version>0.5.0</version>
  <description>
    Tools and utilities for ecl development.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/ecl_tools</url>
  <url type="repository">http://code.google.com/p/embedded-control-library/source/browse/</url>
  <url type="bugtracker">http://code.google.com/p/embedded-control-library/issues/list</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>

  <export>
    <metapackage/>
  </export>
</package>
