<package>
  <name>ecl_tools</name>
  <version>0.50.0</version>
  <description>
    Tools and utilities for ecl development.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/ecl_tools</url>
  <url type="repository">https://github.com/stonier/ecl_tools</url>
  <url type="bugtracker">https://github.com/stonier/ecl_tools/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>

  <export>
    <metapackage/>
  </export>
</package>
