<?xml version="1.0"?>
<package format="2">
  <name>ecl_tools</name>
  <version>1.0.3</version>
  <description>
    Tools and utilities for ecl development.
  </description>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/ecl_tools</url>
  <url type="repository">https://github.com/stonier/ecl_tools</url>
  <url type="bugtracker">https://github.com/stonier/ecl_tools/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ecl_license</exec_depend>
  <exec_depend>ecl_build</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
